# dsvo

./: CMakeLists.txt  README.md  ToDo.txt  note.txt  package.xml  time_format.txt
.backup/: klt.cpp  klt.hpp  klt_edge.cpp  klt_edge.hpp  local_KF_optimizer.cpp
cfg/: DirectStereo.cfg  DirectStereoConfig.cfg  accurate.yaml  aqua.yaml  bbd.yaml  dsvo.cfg  kitti.yaml  mh.yaml  mh_f.yaml  mh_slow.yaml  speed.yaml  v.yaml  zed.yaml  zed_lab.yaml  zed_wall.yaml
compare/: comp.m  comp.m~  comp1.m  plot_time.m  untitled.fig
include/: comparer.hpp  data.hpp  directEdge.h  directSolver.h  helper.hpp  imu.hpp  imu_math.hpp  manager.hpp  state.hpp  stereo_camera.hpp  stereo_rectifier.hpp  temporal_match.hpp
include/comparers/: comparer.hpp  odom_comparer.hpp  point_comparer.hpp  trans_comparer.hpp
include/stereo_camera/: data.hpp  edge_se3m.h  helper.hpp  local_KF_edge.hpp  local_KF_optimizer.hpp  optimizer.hpp  pixel_edge.hpp  pose_edge.hpp  pose_estimater.hpp  reconstructor.hpp  scale_edge.hpp  scale_optimizer.hpp  stereo_camera.hpp
include/stereo_camera/g2o_edges/: pose_edge.hpp  scale_edge.hpp
include/stereo_processor/: helper.hpp  local_KF_optimizer.hpp  pose_estimater.hpp  reconstructor.hpp  scale_optimizer.hpp  stereo_processor.hpp
include/stereo_processor/g2o_edges/: klt_edge.hpp  pose_edge.hpp  scale_edge.hpp
launch/: aqua.launch  aqua_bag.launch  bbd.launch  gazebo.launch  kitti.launch  mh.launch  mh1.launch  sample.launch  sptam_gazebo.launch  sptam_grass.launch  sptam_mh.launch  test.launch  test2.launch  test3.launch  test4.launch  v.launch  zed.launch  zed_hd.launch  zed_live.launch
rviz/: dsvo.rviz
src/: comparer.cpp  directEdge.cpp  directSolver.cpp  helper.cpp  imu.cpp  imu_math.cpp  manager.cpp  manager_node.cpp  pose_repub.cpp  state.cpp  stereo_camera.cpp  stereo_rectifier.cpp  stereo_rectifier_node.cpp
src/comparers/: comparer.cpp  odom_comparer.cpp  point_comparer.cpp  trans_comparer.cpp
src/stereo_camera/: edge_se3m.cpp  kitti_pub.cpp  local_KF_edge.cpp  local_KF_optimizer.cpp  optimizer.cpp  pixel_edge.cpp  pose_edge.cpp  pose_estimater.cpp  reconstructor.cpp  scale_edge.cpp  scale_optimizer.cpp  stereo_camera.cpp  stereo_camera_helpers.cpp  zed_split.cpp
src/stereo_camera/g2o_edges/: edge_se3m.cpp  pose_edge.cpp  scale_edge.cpp
src/stereo_processor/: klt.cpp  pose_estimater.cpp  reconstructor.cpp  scale_optimizer.cpp  stereo_processor.cpp  stereo_processor_helpers.cpp  stereo_processor_node.cpp
src/stereo_processor/g2o_edges/: edge_se3m.cpp  klt_edge.cpp  pose_edge.cpp  scale_edge.cpp
src/stereo_rectifier/: stereo_rectifier.cpp  stereo_rectifier_node.cpp
test/: time_format.txt  zed_sptam.py
test/gazebo/: asphalt.world  grass.world  mud.world  note.txt  sim.launch  sptam_cvt.py  stereo_camera.urdf.xacro
test/include/: comparer.hpp  odom_comparer.hpp  point_comparer.hpp  sptam_recorder.hpp  trans_comparer.hpp
test/matlab/: alignGT.m  alignZ.m  comp.m  comp1.m  dsvo_gt_sptam.m  grass.m  kitti.m  plot_time.m  simple_traj.m  sptam_time.m  time.m  traj.m  vo_gt.m  zed.m
test/src/: comparer.cpp  comparer_node.cpp  odom_comparer.cpp  point_comparer.cpp  sptam_recorder.cpp  trans_comparer.cpp
tools/: stereo_split.cpp
